<resources>
    <string name="app_name">Local Market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="membership">Membership</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="information">Information</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="local_market">Local Market</string>
    <string name="advertise_with_us">Advertise with us!</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register!</string>
    <string name="are_you_new_here">Are you new here?</string>
    <string name="it_s_nice_to_see_you_again">It\'s nice to see you again!</string>
    <string name="welcome_logo">welcome logo</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="help">Help?</string>
    <string name="hey_there">Hey There!</string>
    <string name="need">Need</string>
    <string name="required_field">This field cannot be empty!</string>
    <string name="validNumber">Please enter a valid number!</string>
    <string name="pass_field_required">Password field cannot be empty</string>
    <string name="match_password">Password does not match</string>
    <string name="validemailerror">Please enter a valid email!</string>
    <string name="email_required_field">Email Field cannot be empty</string>
    <string name="hello_new_user">Register</string>
    <string name="letters_only">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="we_got_you">We got you!</string>
    <string name="send_request">Request</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="contact_us">Contact us</string>
    <string name="password_constraints">Password must contain at least: \n8  characters \n1 lowercase character \n1 uppercase character \n1 digit \n1 symbol</string>
    <string name="error_message">Ooops! something went wrong :(\nPlease try again!</string>
    <string name="success_message">Successfully Registered!</string>
</resources>