<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_identity"
            android:title="@string/profile" />
        <item
            android:id="@+id/membership"
            android:icon="@drawable/ic_membership"
            android:title="@string/membership" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_addlocation"
            android:title="@string/location" />

    </group>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us" />
        </menu>
    </item>
</menu>