<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerpage"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin"
        android:text="@string/hello_new_user"
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputEmail"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_input_reg"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputFName"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_input_reg"
        android:digits="@string/letters_only"
        android:drawablePadding="10dp"
        android:hint="@string/first_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputLName"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_input_reg"
        android:digits="@string/letters_only"
        android:drawablePadding="10dp"
        android:hint="@string/last_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPassword"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_input_reg"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:cursorVisible="true"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPhoneNo"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_input_reg"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputConfirm"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_input_reg"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="98dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/lmicon"/>

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:fontFamily="@font/bold"
        android:text="@string/local_market"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="61dp"
        android:layout_height="52dp"
        android:outlineAmbientShadowColor="@color/teal_200"
        android:outlineSpotShadowColor="@color/teal_700"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

</androidx.constraintlayout.widget.ConstraintLayout>